[gd_scene format=3 uid="uid://dip28ou65fagx"]

[ext_resource type="Script" uid="uid://78hhdrkrx6gw" path="res://scripts/ui/collection_screen.gd" id="1_1"]

[node name="CollectionScreen" type="Control" unique_id=284288980]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="." unique_id=1749095243]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=676871967]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1362402068]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=851071205]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar" unique_id=521184679]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "‚Üê Volver"

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TopBar" unique_id=606953424]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "üìö Mi Colecci√≥n"
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar" unique_id=580337540]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0 / 0 cartas"
vertical_alignment = 1

[node name="SearchAndFilters" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=610679111]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SearchBar" type="LineEdit" parent="MarginContainer/VBoxContainer/SearchAndFilters" unique_id=301350444]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
placeholder_text = "üîç Buscar carta..."

[node name="ColorFilter" type="OptionButton" parent="MarginContainer/VBoxContainer/SearchAndFilters" unique_id=1089025404]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "Todos los colores"
popup/item_0/id = 0
popup/item_1/text = "Rojo"
popup/item_1/id = 1
popup/item_2/text = "Azul"
popup/item_2/id = 2
popup/item_3/text = "Verde"
popup/item_3/id = 3
popup/item_4/text = "Morado"
popup/item_4/id = 4
popup/item_5/text = "Amarillo"
popup/item_5/id = 5
popup/item_6/text = "Negro"
popup/item_6/id = 6

[node name="TypeFilter" type="OptionButton" parent="MarginContainer/VBoxContainer/SearchAndFilters" unique_id=773523900]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "Todos los tipos"
popup/item_0/id = 0
popup/item_1/text = "L√≠der"
popup/item_1/id = 1
popup/item_2/text = "Personaje"
popup/item_2/id = 2
popup/item_3/text = "Evento"
popup/item_3/id = 3
popup/item_4/text = "Escenario"
popup/item_4/id = 4

[node name="RarityFilter" type="OptionButton" parent="MarginContainer/VBoxContainer/SearchAndFilters" unique_id=1178063707]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "Todas las rarezas"
popup/item_0/id = 0
popup/item_1/text = "Common (C)"
popup/item_1/id = 1
popup/item_2/text = "Uncommon (UC)"
popup/item_2/id = 2
popup/item_3/text = "Rare (R)"
popup/item_3/id = 3
popup/item_4/text = "Super Rare (SR)"
popup/item_4/id = 4
popup/item_5/text = "Secret (SEC)"
popup/item_5/id = 5
popup/item_6/text = "Leader (L)"
popup/item_6/id = 6

[node name="SetFilter" type="OptionButton" parent="MarginContainer/VBoxContainer/SearchAndFilters" unique_id=1985597866]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer" unique_id=823116818]
layout_mode = 2
size_flags_vertical = 3

[node name="CardsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer" unique_id=416530359]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 7

[node name="LoadingLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1648636083]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚è≥ Cargando cartas..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoCardsLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=705608084]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "No hay cartas en tu colecci√≥n.
¬°Empieza a coleccionar!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pagination" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1593192734]
layout_mode = 2

[node name="PrevButton" type="Button" parent="MarginContainer/VBoxContainer/Pagination" unique_id=1359482989]
layout_mode = 2
text = "‚óÄ Anterior"

[node name="PageLabel" type="Label" parent="MarginContainer/VBoxContainer/Pagination" unique_id=1986545050]
layout_mode = 2

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/Pagination" unique_id=448749281]
layout_mode = 2
text = "Siguiente ‚ñ∂"

[connection signal="pressed" from="MarginContainer/VBoxContainer/TopBar/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/SearchAndFilters/SearchBar" to="." method="_on_search_text_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/SearchAndFilters/ColorFilter" to="." method="_on_color_filter_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/SearchAndFilters/TypeFilter" to="." method="_on_type_filter_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/SearchAndFilters/RarityFilter" to="." method="_on_rarity_filter_changed"]
